--- a/View/Index/contact.phtml
+++ b/View/Index/contact.phtml
@@ -1,1 +1,30 @@
 <b>This is contact action of index controller</b>
+<form method="post">
+    <table>
+        <tr>
+            <td><label for="login">Your Name:</label></td>
+            <td><input type="text" name="login" id="login" placeholder="Enter your name" /></td>
+        </tr>
+        <tr>
+            <td><label for="email">Email:</label></td>
+            <td><input type="email" name="email" id="email" placeholder="Enter your email" /></td>
+        </tr>
+        <tr>
+            <td><label for="password">Password:</label></td>
+            <td><input type="text" name="password" id="password" placeholder="Enter your password" /></td>
+        </tr>
+        <tr>
+            <td><label for="password_repeat">Repeat Password:</label></td>
+            <td><input type="text" name="password_repeat" id="password_repeat" placeholder="Enter your password" /></td>
+        </tr>
+        <tr>
+            <td><label for="password_repeat">Write About Yourself:</label></td>
+            <td><textarea name="about" id="about" placeholder="Write About Yourself"></textarea></td>
+        </tr>
+    </table>
+    <input type="submit" value="Register" />
+</form>
+
+<?php
+
+print_r($_POST);
