--- a/View/default_layout.phtml
+++ b/View/default_layout.phtml
@@ -2,28 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mega site</title>
+    <title>Document</title>
 </head>
 <body>
+
 <a href="/">Home</a>
 <a href="/index.php?route=book/index">Books</a>
 <a href="/index.php?route=index/contact">Contact</a>
+<a href="/index.php?4rewqdf">Test</a>
+
+
+
 <hr>
 
 
-<?=$content ?>
+<?= $content ?>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
 <hr>
 All rights reserved &copy; 2016
+
 </body>
 </html>
