--- a/View/Index/contact.phtml
+++ b/View/Index/contact.phtml
@@ -1,30 +1,26 @@
-<b>This is contact action of index controller</b>
-<form method="post">
-    <table>
-        <tr>
-            <td><label for="login">Your Name:</label></td>
-            <td><input type="text" name="login" id="login" placeholder="Enter your name" /></td>
-        </tr>
-        <tr>
-            <td><label for="email">Email:</label></td>
-            <td><input type="email" name="email" id="email" placeholder="Enter your email" /></td>
-        </tr>
-        <tr>
-            <td><label for="password">Password:</label></td>
-            <td><input type="text" name="password" id="password" placeholder="Enter your password" /></td>
-        </tr>
-        <tr>
-            <td><label for="password_repeat">Repeat Password:</label></td>
-            <td><input type="text" name="password_repeat" id="password_repeat" placeholder="Enter your password" /></td>
-        </tr>
-        <tr>
-            <td><label for="password_repeat">Write About Yourself:</label></td>
-            <td><textarea name="about" id="about" placeholder="Write About Yourself"></textarea></td>
-        </tr>
-    </table>
-    <input type="submit" value="Register" />
-</form>
+<b>This is contact action of index controller</b><br>
 
+<b><?= Session::getFlash(); ?></b>
+<table>
+<form method="post">
+    <tr>
+        <td>Username: </td>
+        <td><input type="text" name="username" value="<?= $form->username?>"></td>
+    </tr>
+    <tr>
+        <td>Email:</td>
+        <td><input type="email" name="email" value="<?= $form->email?>"></td>
+    </tr>
+    <tr>
+        <td>Message:</td>
+        <td><textarea name="message" id="" cols="30" rows="10"><?= $form->message?></textarea></td>
+    </tr>
+    <tr><td><button>Go</button></td></tr>
+
+</form>
+</table>
 <?php
+
+
 
 print_r($_POST);
