--- a/View/Index/index.phtml
+++ b/View/Index/index.phtml
@@ -1,4 +1,7 @@
-<b>This is index action of index controller</b>
-<br>
-<?= $var1 ?><br>
-<?= $var2 ?>
+<b>This is index action of index controller</b><br>
+<h1><?= $page['title']?></h1>
+<?= $page['content']; ?><br>
+<?= $page['alias']; ?><br>
+
+
+
