--- a/View/default_layout.phtml
+++ b/View/default_layout.phtml
@@ -2,15 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title><?=MetaHelper::getTitle()?></title>
 </head>
 <body>
 
-<a href="/">Home</a>
-<a href="/index.php?route=book/index">Books</a>
-<a href="/index.php?route=index/contact">Contact</a>
-<a href="/index.php?4rewqdf">Test</a>
 
+<a href="/">Home</a>
+<a href="/books">Books</a>
+<a href="/contact-us">Contact</a>
+<a href="/cart">Cart</a>
+<a href="/author">Author</a>
+<a href="/news">News</a>
+<?php if (Session::has('user')) : ?>
+    <a href="/logout">Logout</a>
+<?php else : ?>
+    <a href="/login">Login</a>
+    <a href="/register">Register</a>
+<?php endif;?>
+<?php if (Session::has('user')) : ?>
+    <a href="/admin">Admin</a>
+<?php endif; ?>
 
 
 <hr>
@@ -29,7 +40,53 @@
 
 
 <hr>
-All rights reserved &copy; 2016
+All rights reserved &copy; 1980 - <?= date('Y-m-d H:i:s'); ?>
 
 </body>
 </html>
+
+
+<!--<a href="/">Home</a>-->
+<!--<a href="/index.php?route=book/index">Books</a>-->
+<!--<a href="/index.php?route=book/author">Authors</a>-->
+<!--<a href="/index.php?route=index/contact">Contact</a>-->
+<!--<a href="/index.php?route=news/index">News</a>-->
+<!--<a href="/index.php?route=news/add">Add News</a>-->
+<!--<a href="/index.php?route=index/tasks">Tasks</a>-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
